# pipo

./: .gitignore  Dockerfile  README.md  go.sum  package-lock.json  package.json
.github/workflows/: main.yml
components/: articlecard.js  searchbox.js
go/: go.mod  go.sum  server.go
go/crawler/: crawler.go  test.db
old/: go.mod
old/go/crawler/: crawler  wikiCrawler.go
old/rust/: Cargo.toml
pages/: index.js  infopage.js  search.js
pages/api/search/: notion.js
pages/api/search/notion/: [searchWord].js
pages/api/search/twitter/: hoge.js
react/my-app/: package-lock.json  package.json
react/my-app/src/: App.css  App.js  articleCard.js  informationPage.js  search.js
rust/src/: main.rs
styles/: ArticleCard.module.css  Home.module.css  Infopage.module.css  Search.module.css  globals.css
