[package]
name = "calc_server"
version = "0.1.0"
authors = ["EbichanOO <takanori.sao@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
env_logger = "0.9.0"
reqwest = { version = "0.10.8", features = ["blocking"] }
eyre = "0.6"